[package]
name = "cpp_class_diagrams"
version = "0.1.0"
edition = "2021"
default-run = "cpp_class_diagrams"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang-ast = "0.1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
